# mio_cuda

./: .gitignore  CMakeLists.txt  README.md  dev_array.h  kernel.cu  kernel.h  main.cu  matrix_mul.cu
